--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1882,7 +1882,7 @@ button:disabled,
 }
 
 #menu .links li a:hover {
-  background: #45558d;
+  background: #3B5C4A;
 }
 
 @media screen and (max-width: 736px) {
