--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1938,6 +1938,7 @@ body.is-menu-visible #menu .inner {
 #banner .logo .icon {
   border-radius: 100%;
   border: solid 2px rgba(245,241,233,0.125);
+  background-color: rgba(255, 255, 255, 0.2);
   cursor: default;
   display: inline-block;
   font-size: 2em;
@@ -1946,6 +1947,25 @@ body.is-menu-visible #menu .inner {
   text-align: center;
   width: 2.25em;
 }
+
+.full-logo {
+  background-color: rgba(255, 255, 255, 0.2);
+  width: 70%;
+  height: auto;
+}
+
+.logo-list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.copyright {
+  list-style: none;
+}
+
 
 #banner h2 {
   -moz-transition: opacity 0.5s ease, transform 0.5s ease, filter 0.25s ease;
