Add death doula

--- a/src/services.njk
+++ b/src/services.njk
@@ -65,13 +65,15 @@ permalink: /services.html
 						</tr>
 					</tbody>
 				</table>
-				<p>Hire me for your next business event! A treat for your patrons and/or employees.</p>
 				<table class="pricing-fixed">
 					<thead>
 						<tr>
 							<th colspan="2">Business Event Pricing</th>
 						</tr>
 					</thead>
+				</table>
+				<p>Hire me for your next business event! A treat for your patrons and/or employees.</p>
+				<table class="pricing-fixed">
 					<tbody>
 						<tr>
 							<td class="pricing-col">7 minute mini-readings for each person</td>
@@ -79,17 +81,38 @@ permalink: /services.html
 						</tr>
 					</tbody>
 				</table>
-				<p>I am certified in Hypnosis and also am accredited through the International Board of Coaches and Practitioners! If you would like to delve into the depths of your mind as a 17 year Professional Intuitive, consider hiring me for a Hypnosis Session.</p>
 				<table class="pricing-fixed">
 					<thead>
 						<tr>
 							<th colspan="2">Hypnosis Session</th>
 						</tr>
 					</thead>
+				</table>
+				<p>I am certified in Hypnosis and also am accredited through the International Board of Coaches and Practitioners! If you would like to delve into the depths of your mind as a 17 year Professional Intuitive, consider hiring me for a Hypnosis Session.</p>
+				<table class="pricing-fixed">
 					<tbody>
 						<tr>
 							<td class="pricing-col">1 hour</td>
 							<td class="pricing-col">$140 per hour</td>
+						</tr>
+					</tbody>
+				</table>
+				<table class="pricing-fixed">
+					<thead>
+						<tr>
+							<th colspan="2">Death Doula</th>
+						</tr>
+					</thead>
+				</table>
+				<p>Providing non-medical holistic support for individuals at the end of their life and respite for the caregivers who love them. I focus on holding space spiritually and keep individuals supported to their dignity. We plan for the final days together, advocate for personal wishes to be carried through, make legacy pieces, or simply just spend time together watching game shows.</p>
+				<table class="pricing-fixed">
+					<tbody>
+						<tr>
+							<td class="pricing-col">Planning or short visits</td>
+							<td class="pricing-col">$30 per hour</td>
+						</tr>
+						<tr>
+							<td class="pricing-col" colspan="2">Extra for any type of projects requiring supplies, etc.</td>
 						</tr>
 					</tbody>
 				</table>
