--- a/src/about.njk
+++ b/src/about.njk
@@ -13,6 +13,8 @@ permalink: /about.html
 		</div>
 	</header>
 
+	{% include "partials/eye-divider.njk" %}
+
 	<div class="wrapper">
 		<div class="inner">
 
