--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ permalink: /index.html
 
 <section id="banner">
 	<div class="inner">
-		<div class="logo"><img class="icon" src="/images/TonyanaLogo02A.png" alt="Tonyana Cruz Logo" /></div>
+		<div class="logo">{% include "partials/logo-animated.njk" %}</div>
 		<h1>Tonyana Cruz</h1>
 		<h2>The Subconscious Specialist</h2>
 		<p>I am a Transformational Intuitive Tarot Reader who also utilizes the power of working with Dream Interpretation and Hypnosis. Please, allow me to be your Subconscious Specialist! I check in with your energy to see where you are headed if you continue with the same mind-set and help you make more informed decisions. How can I help you?</p>
