--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,12 +5,17 @@
 	</head>
 	<body class="is-preload">
 
+		<canvas id="stars-canvas"></canvas>
+
 		<div id="page-wrapper">
 
 			{% include "partials/nav.njk" %}
 
 			{{ content | safe }}
 
+			{% if showTestimonials !== false and showFooter !== false %}
+			{% include "partials/testimonials.njk" %}
+			{% endif %}
 			{% if showFooter !== false %}
 			{% include "partials/footer.njk" %}
 			{% endif %}
