--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -2,6 +2,45 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <meta name="description" content="{{ description | default(site.description) }}" />
 <title>{{ title }} | {{ site.title }}</title>
+
+<!-- Canonical URL -->
+<link rel="canonical" href="{{ site.url }}{{ permalink | default('/') }}" />
+
+<!-- Open Graph -->
+<meta property="og:title" content="{{ title }} | {{ site.title }}" />
+<meta property="og:description" content="{{ description | default(site.description) }}" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="{{ site.url }}{{ permalink | default('/') }}" />
+<meta property="og:image" content="{{ site.url }}/images/about1.jpg" />
+<meta property="og:site_name" content="{{ site.title }}" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="{{ title }} | {{ site.title }}" />
+<meta name="twitter:description" content="{{ description | default(site.description) }}" />
+<meta name="twitter:image" content="{{ site.url }}/images/about1.jpg" />
+
+<!-- JSON-LD Structured Data -->
+<script type="application/ld+json">
+{
+	"@context": "https://schema.org",
+	"@type": "ProfessionalService",
+	"name": "{{ site.title }} - {{ site.author }}",
+	"description": "{{ site.description }}",
+	"url": "{{ site.url }}",
+	"email": "{{ site.email }}",
+	"areaServed": {
+		"@type": "City",
+		"name": "Cincinnati, OH"
+	},
+	"serviceType": ["Tarot Reading", "Astrology", "Hypnotherapy", "Dream Interpretation", "Death Doula"],
+	"sameAs": [
+		"{{ site.social.facebook }}",
+		"{{ site.social.instagram }}"
+	]
+}
+</script>
+
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic" />
