--- a/src/_includes/partials/scripts.njk
+++ b/src/_includes/partials/scripts.njk
@@ -4,3 +4,5 @@
 <script src="/assets/js/breakpoints.min.js"></script>
 <script src="/assets/js/util.js"></script>
 <script src="/assets/js/main.js"></script>
+<script src="/assets/js/stars.js"></script>
+<script src="/assets/js/testimonials.js"></script>
