--- a/src/services.njk
+++ b/src/services.njk
@@ -13,6 +13,8 @@ permalink: /services.html
 		</div>
 	</header>
 
+	{% include "partials/eye-divider.njk" %}
+
 	<div class="wrapper">
 		<div class="inner">
 			<div class="table-wrapper">
