--- a/src/about.njk
+++ b/src/about.njk
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: About Me
-description: Learn about Tonyana Cruz's 17+ years of experience in Tarot, Astrology, and Hypnotherapy. Certified Clinical Hypnotherapist and Parapsychology diploma holder.
+title: About Tonyana Cruz - Tarot Reader & Hypnotherapist
+description: Meet Tonyana Cruz, Cincinnati's Subconscious Specialist. 17+ years as a professional tarot reader, certified clinical hypnotherapist (IBCP), and parapsychology diploma holder serving the Greater Cincinnati area.
 permalink: /about.html
 ---
 
