--- a/src/contact.njk
+++ b/src/contact.njk
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: Contact
-description: Get in touch with Tonyana Cruz to schedule a Tarot reading, Hypnotherapy session, or ask questions about intuitive services.
+title: Book a Tarot Reading in Cincinnati OH
+description: Contact Tonyana Cruz to schedule a tarot reading, hypnotherapy session, or private party in Cincinnati OH. In-person, phone, and Voxer readings available. Reach out today.
 showFooter: false
 permalink: /contact.html
 ---
