--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: Home
-description: Tonyana Cruz is a Transformational Intuitive Tarot Reader, Dream Interpreter, and Clinical Hypnotherapist helping you unlock your subconscious potential.
+title: Tarot Reader Cincinnati OH
+description: Tonyana Cruz is a professional tarot reader and clinical hypnotherapist in Cincinnati OH with 17+ years experience. Tarot readings, astrology, dream interpretation, hypnotherapy and death doula services. Book your session today.
 headerClass: alt
 headerTitle: Subconscious Specialist - Tonyana Cruz
 permalink: /index.html
