--- a/src/kind-words.njk
+++ b/src/kind-words.njk
@@ -1,9 +1,35 @@
 ---
 layout: base.njk
-title: Kind Words
-description: Read testimonials from Tonyana Cruz's clients about their experiences with Tarot readings, Hypnotherapy, and intuitive guidance sessions.
+title: Tarot Reader Reviews & Testimonials
+description: Read real client testimonials about tarot readings and hypnotherapy sessions with Tonyana Cruz in Cincinnati OH. See why clients call her readings spot on and transformative.
 showTestimonials: false
 permalink: /kind-words.html
+jsonld: |
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Subconscious Specialist - Tonyana Cruz",
+    "review": [
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Kristen"},
+        "reviewBody": "This girl definitely has a sixth sense about people. Not only that, she is incredibly genuine and kind and brings a positivity with her that I greatly appreciate and admire. I highly recommend Tonyana for her Tarot readings.",
+        "reviewRating": {"@type": "Rating", "ratingValue": "5"}
+      },
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Kellie"},
+        "reviewBody": "Tonyana's readings are spot on. She brings such a tranquil energy and is an absolute pleasure to know. I highly recommend her readings to gain clarity for yourself. She is a blessing.",
+        "reviewRating": {"@type": "Rating", "ratingValue": "5"}
+      },
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Lequita"},
+        "reviewBody": "She has really made a huge impact on my life. She has helped me remember and reclaim MY POWER!",
+        "reviewRating": {"@type": "Rating", "ratingValue": "5"}
+      }
+    ]
+  }
 ---
 
 <section id="wrapper">
