--- a/src/services.njk
+++ b/src/services.njk
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: Services
-description: Explore Tonyana Cruz's intuitive services including Tarot readings, Astrology, Hypnotherapy sessions, private parties, and business event bookings.
+title: Tarot Reading Services & Pricing
+description: Tarot readings, hypnotherapy, astrology, dream interpretation and death doula services in Cincinnati OH. In-person and phone readings from $40. Book Tonyana Cruz today.
 permalink: /services.html
 ---
 
