--- a/src/_includes/partials/scripts.njk
+++ b/src/_includes/partials/scripts.njk
@@ -6,3 +6,5 @@
 <script src="/assets/js/main.js"></script>
 <script src="/assets/js/stars.js"></script>
 <script src="/assets/js/testimonials.js"></script>
+<script src="/assets/js/form-celebration.js"></script>
+<script src="/assets/js/nav-sparkles.js"></script>
