--- a/src/index.njk
+++ b/src/index.njk
@@ -14,6 +14,11 @@ permalink: /index.html
 		<h2>The Subconscious Specialist</h2>
 		<p>I am a Transformational Intuitive Tarot Reader who also utilizes the power of working with Dream Interpretation and Hypnosis. Please, allow me to be your Subconscious Specialist! I check in with your energy to see where you are headed if you continue with the same mind-set and help you make more informed decisions. How can I help you?</p>
 	</div>
+	<a href="#one" class="scroll-indicator" aria-label="Scroll down">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 24" fill="none" stroke="#F5F1E9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+			<polyline points="4,4 20,18 36,4" />
+		</svg>
+	</a>
 </section>
 
 <section id="wrapper">
