Pushing cahe busting directly to main

--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -141,5 +141,5 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic" />
-<link rel="stylesheet" href="/assets/css/main.css" />
-<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
+<link rel="stylesheet" href="/assets/css/main.css?v={{ build.timestamp }}" />
+<noscript><link rel="stylesheet" href="/assets/css/noscript.css?v={{ build.timestamp }}" /></noscript>
