--- a/src/_includes/partials/scripts.njk
+++ b/src/_includes/partials/scripts.njk
@@ -3,8 +3,8 @@
 <script src="/assets/js/browser.min.js"></script>
 <script src="/assets/js/breakpoints.min.js"></script>
 <script src="/assets/js/util.js"></script>
-<script src="/assets/js/main.js"></script>
-<script src="/assets/js/stars.js"></script>
-<script src="/assets/js/testimonials.js"></script>
-<script src="/assets/js/form-celebration.js"></script>
-<script src="/assets/js/nav-sparkles.js"></script>
+<script src="/assets/js/main.js?v={{ build.timestamp }}"></script>
+<script src="/assets/js/stars.js?v={{ build.timestamp }}"></script>
+<script src="/assets/js/testimonials.js?v={{ build.timestamp }}"></script>
+<script src="/assets/js/form-celebration.js?v={{ build.timestamp }}"></script>
+<script src="/assets/js/nav-sparkles.js?v={{ build.timestamp }}"></script>
